--- a/captainhardrock.eng.html
+++ b/captainhardrock.eng.html
@@ -68,14 +68,14 @@
                 </li>
                 <li class="nav-item dropdown open">
                     <a class="nav-link link text-white dropdown-toggle display-4" href="https://mobirise.co" data-toggle="dropdown-submenu" aria-expanded="true">Full episodes
-                    </a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="page80.html">English Dub</a></div>
+                    </a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="episodeseng.html">English Dub</a></div>
                 </li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><div class="container-fluid p-3 my-3 bg-dark text-white cid-rXARyiD75r" id="custom-html-3g" data-rv-view="380">
+<section class="engine"><a href="https://mobirise.info/h">create a web page for free</a></section><div class="container-fluid p-3 my-3 bg-dark text-white cid-rXARyiD75r" id="custom-html-3g" data-rv-view="628">
   <h1><br><br><br><br>Captain Hardrock</h1>
    <hr>
   <p>Season 2 Episode 12</p>
