--- a/episodeseng.html
+++ b/episodeseng.html
@@ -68,18 +68,18 @@
                 </li>
                 <li class="nav-item dropdown open">
                     <a class="nav-link link text-white dropdown-toggle display-4" href="https://mobirise.co" data-toggle="dropdown-submenu" aria-expanded="true">Full episodes
-                    </a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="page80.html">English Dub</a></div>
+                    </a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="episodeseng.html">English Dub</a></div>
                 </li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><div class="container cid-rYP9eNMdD6" id="custom-html-5o" data-rv-view="506">
+<section class="engine"><a href="https://mobirise.info/l">free website templates</a></section><div class="container cid-rYP9eNMdD6" id="custom-html-5o" data-rv-view="754">
     <div class="row">
         <h1><br><br><br><br><br>Full episodes<br><br></h1>
       </div>
-    </div><ul class="nav nav-tabs cid-rYP9eNMdD6" id="custom-html-5o" role="tablist" data-rv-view="506">
+    </div><ul class="nav nav-tabs cid-rYP9eNMdD6" id="custom-html-5o" role="tablist" data-rv-view="754">
   <li class="nav-item">
     <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Season 1</a>
   </li>
@@ -89,7 +89,7 @@
   <li class="nav-item">
     <a class="nav-link" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false">Season 3</a>
   </li>
-</ul><div class="tab-content cid-rYP9eNMdD6" id="custom-html-5o" data-rv-view="506">
+</ul><div class="tab-content cid-rYP9eNMdD6" id="custom-html-5o" data-rv-view="754">
   <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
   <style>
       .bd-placeholder-img {
@@ -327,7 +327,7 @@
         </div>
         <div class="col-md-4">
           <div class="card mb-4 shadow-sm mb-4 bg-white rounded">
-            <a href="https://miraculous33.webnode.fr/s1e20/"><img src="assets/images/s1e20-700x394.jpg" class="img-fluid" alt="Responsive image" title="" media-simple="true"></a>
+            <a href="https://miraculous33.webnode.fr/s1e20/"><img src="assets/images/s1e08-700x394.jpg" class="img-fluid" alt="Responsive image" title="" media-simple="true"></a>
             <div class="card-body">
               <p class="card-text"><a href="https://miraculous33.webnode.fr/s1e20/">Pixelator</a></p>
               <div class="d-flex justify-content-between align-items-center">
