--- a/index.html
+++ b/index.html
@@ -68,14 +68,14 @@
                 </li>
                 <li class="nav-item dropdown open">
                     <a class="nav-link link text-white dropdown-toggle display-4" href="https://mobirise.co" data-toggle="dropdown-submenu" aria-expanded="true">Full episodes
-                    </a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="page80.html">English Dub</a></div>
+                    </a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="episodeseng.html">English Dub</a></div>
                 </li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free website templates</a></section><section class="cid-rYPFgDDGja mbr-fullscreen mbr-parallax-background" id="header2-5p">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><section class="cid-rYPFgDDGja mbr-fullscreen mbr-parallax-background" id="header2-5p">
 
     
 
