--- a/silencer.eng.html
+++ b/silencer.eng.html
@@ -68,14 +68,14 @@
                 </li>
                 <li class="nav-item dropdown open">
                     <a class="nav-link link text-white dropdown-toggle display-4" href="https://mobirise.co" data-toggle="dropdown-submenu" aria-expanded="true">Full episodes
-                    </a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="page80.html">English Dub</a></div>
+                    </a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="episodeseng.html">English Dub</a></div>
                 </li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">how to create your own web page for free</a></section><div class="container-fluid p-3 my-3 bg-dark text-white cid-rXBwSX4gnN" id="custom-html-3b" data-rv-view="443">
+<section class="engine"><a href="https://mobirise.info/d">web maker</a></section><div class="container-fluid p-3 my-3 bg-dark text-white cid-rXBwSX4gnN" id="custom-html-3b" data-rv-view="691">
   <h1><br><br><br><br>Silencer</h1>
    <hr>
   <p>Season 3 Episode 7</p>
