--- a/thebubbler.eng.html
+++ b/thebubbler.eng.html
@@ -68,14 +68,14 @@
                 </li>
                 <li class="nav-item dropdown open">
                     <a class="nav-link link text-white dropdown-toggle display-4" href="https://mobirise.co" data-toggle="dropdown-submenu" aria-expanded="true">Full episodes
-                    </a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="page80.html">English Dub</a></div>
+                    </a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="episodeseng.html">English Dub</a></div>
                 </li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">responsive website templates</a></section><div class="container-fluid p-3 my-3 bg-dark text-white cid-rXAu57syrf" id="custom-html-1x" data-rv-view="269">
+<section class="engine"><a href="https://mobirise.info/y">free html website templates</a></section><div class="container-fluid p-3 my-3 bg-dark text-white cid-rXAu57syrf" id="custom-html-1x" data-rv-view="517">
   <h1><br><br><br><br><br>The Bubbler</h1>
    <hr>
   <p>Season 1 Episode 2</p>
